Change mobile width to 100%
On .rmm.minimal .rmm-toggled  changed width value from 95% to 100%

--- a/stylesheets/responsivemobilemenu.css
+++ b/stylesheets/responsivemobilemenu.css
@@ -106,7 +106,7 @@ License: CC BY 3.0 http://creativecommons.org/licenses/by/3.0/
 }
 
 .rmm.minimal .rmm-toggled {
-	width:95%;
+	width:100%; /* original valué set to 95% */
 	min-height:26px;
 }
 .rmm.minimal .rmm-toggled-controls {
