--- a/stylesheets/base.css
+++ b/stylesheets/base.css
@@ -60,7 +60,7 @@
  }
 
  header {
-	 background: #009900; /*#334d66 antiguo color azul*/
+	 background: #006600; /*#334d66 antiguo color azul --- color barra superior de botones*/
  }
 
  footer {
