--- a/stylesheets/base.css
+++ b/stylesheets/base.css
@@ -60,7 +60,7 @@
  }
 
  header {
-	 background: #7bc043; /*#334d66 antiguo color azul --- color barra superior de botones*/
+	 background: #5acb69; /*#334d66 antiguo color azul --- color barra superior de botones*/
  }
 
  footer {
